--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.65"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
